--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -1,16 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Binary Beans</title>
-</head>
-<body>
-    <h1>About Binary Beans</h1>
-    <div>
-        <h2>{{ about.title }}</h2>
-        {{ about.content }}
-        <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
+{% extends "base.html" %}
+
+{% block content %}
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12 col-md-8">
+            <h2>{{ about.title }}</h2>
+            {{ about.content }}
+        </div>
     </div>
-</body>
-</html>
+    <div class="row">
+        <div class="col text-right">
+          <!-- Updated on field goes in here -->
+    
+          <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
+        </div>
+    </div>
+</div>
+{% endblock content %}
