--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,7 @@ body {
     }
 }
 
+
 .navbar {
     background-color: rgba(255, 255, 255, 0.75);
     display: flex;
@@ -34,15 +35,20 @@ body {
 
 .nav-link {
     color: black;
-    font-size: 125%;
+    font-size: 100%;
 }
 
 .login {
     color: black;
     font-size: 100%;
+    position: relative;
 }
 
+.nav-link .active {
+    color: red;
+}
 
+  
 
-
+/* Footer */
 
