Add content to the home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    padding-bottom: 50px;
 }
 
 @media(max-width: 991px){
@@ -48,4 +49,3 @@ body {
     color: red;
 }
 
-  
