--- a/templates/base.html
+++ b/templates/base.html
@@ -74,38 +74,15 @@
       {% endblock content %}
 
     </main>
-
-    <footer class="text-center fixed-bottom" style="background-color: rgba(255, 255, 255, 0.75);">
-      <!-- Grid container -->
-      <div class="container p-4">
-        <!--Grid row-->
-        <div class="row">
-          <!--Grid column-->
-          <div class="col-lg-6 col-12 mb-4 mb-md-0 text-center">
-            <h5 class="text-uppercase">Opening Times</h5>
-            <p>Monday - Saturday: 9:00am - 4:00pm</p>
-            <p>Sunday: CLOSED</p>
-          </div>
-          <!--Grid column-->
-    
-          <!--Grid column-->
-          <div class="col-lg-6 col-12 mb-4 mb-md-0 fs-8 text-center">
-            <h5 class="text-uppercase">Contact Us</h5>
-            <p>Email: BinaryBeans@gmail.com</p>
-          </div>
-          <!--Grid column-->
-        </div>
-        <!--Grid row-->
-      </div>
-      <!-- Grid container -->
-    
-      <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2024 Copyright:
-        <a class="text-body" href="#">BinaryBeans</a>
-      </div>
-      <!-- Copyright -->
-    </footer>
-
 </body>
+<section class="fixed-bottom">
+  <footer class="text-center" style="background-color: rgba(255, 255, 255, 0.75);">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+      © 2024 Copyright:
+      <a class="text-body" href="#">BinaryBeans</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+</section>
 </html>
