--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -1,19 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-12 col-md-8">
-            <h2>{{ about.title }}</h2>
-            {{ about.content }}
-        </div>
+
+<div class="d-column-flex p-2 text-center col-8 col-lg-6 position-absolute top-50 start-50 translate-middle mb-1">
+    <div style="background-color: rgb(255, 255, 255, 0.9);">
+        <h2>{{ about.title }}</h2>
+        <hr>
+        <p>{{ about.content }}</p>
+        <hr>
     </div>
-    <div class="row">
-        <div class="col text-right">
-          <!-- Updated on field goes in here -->
-    
-          <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
-        </div>
+    <div style="background-color: rgb(255, 255, 255, 0.9);">
+        <h4>Opening Times</h3>
+        <hr>
+        <p>Monday - Friday: 9:00am - 4:00pm | Saturday: 8:30am - 5:00pm | Sunday: CLOSED</p>
+        <hr>
+    </div>
+    <div style="background-color: rgb(255, 255, 255, 0.9);">
+        <p>updated on: {{ about.updated_on }}</p>
     </div>
 </div>
+
+
 {% endblock content %}
