--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="d-column-flex p-2 text-center col-8 col-lg-6 position-absolute top-50 start-50 translate-middle mb-1">
+<div class="d-column-flex p-2 text-center col-12 col-md-8 col-lg-6 position-absolute top-50 start-50 translate-middle mb-1">
     <div style="background-color: rgb(255, 255, 255, 0.9);">
         <h2>{{ about.title }}</h2>
         <hr>
