--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@ body {
 
 @media(max-width: 991px){
     .sidebar{
-        background-color: rgba(255, 255, 255, 0.4);
+        background-color: rgba(255, 255, 255);
         backdrop-filter: blur(10px);
     }
 }
