--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,20 @@
-
+body {
+    background-color: rgb(237, 242, 239);
+}
 
 @media(max-width: 991px){
     .sidebar{
-        background-color: rgba(255, 255, 255);
+        background-color: rgba(237, 242, 239);
         backdrop-filter: blur(10px);
     }
 }
 
-
 .navbar {
-    background-color: rgba(255, 255, 255, 0.75);
+    background-color: rgba(237, 242, 239);;
     display: flex;
     justify-content: center;
+    position: fixed;
+    
 }
 
 .navbar-brand {
@@ -37,7 +40,30 @@
     position: relative;
 }
 
+/* Header */
 
+header {
+    background: url("../images/coffee-shop.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 600px;
+}
+
+header h1{
+    text-align: center;
+    margin-top: 200px;
+    color: rgb(237, 242, 239);
+}
+
+
+/* Footer */
+
+footer {
+    background-color: rgb(221, 226, 227);
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
 
  
 
