Add content to the events page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,3 +70,9 @@ footer {
 #menu {
     background: url("../images/black-board.avif");
 }
+
+/* Events page */
+
+pre {
+    white-space: pre-wrap;
+}
