--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -1,1 +1,14 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
+<section class="container">
+    <h1 class="text-center display-5 mt-5">{{ events.title }}</h1>
+    <div class="text-center">
+        <hr>
+        <p><pre>{{ events.content}}</pre></p>
+    </div>
+</section>
+
+{% endblock content %}
