--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -1,13 +1,24 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
 <section class="container">
-    <h1 class="text-center display-5 mt-5">{{ events.title }}</h1>
+    <h2 class="text-center display-5 mt-5">{{ events.title }}</h2>
     <div class="text-center">
         <hr>
         <p><pre>{{ events.content}}</pre></p>
+        <hr>
+    </div>
+    <div class="row justify-content-center">
+        <h2>Book a private event at our cafe!</h2>
+        <p>Looking for the perfect venue to host your next private event? Binary Beans offers a charming and intimate setting ideal for any occasion. Whether you're planning a birthday celebration, corporate meeting, baby shower, or any other special gathering, our café provides a cozy and welcoming atmosphere to make your event unforgettable. </p>
+        <form method="post">
+            {{ booking_form | crispy }}
+            {% csrf_token %}
+            <button class="btn btn-secondary" type="submit">Submit</button>
+        </form>
     </div>
 </section>
 
