--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,9 @@
 {% url 'home' as about_url %}
 {% url 'menu' as menu_url %}
 {% url 'events' as events_url %}
+{% url 'account_login' as login_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_logout' as logout_url %}
 
 
 <!DOCTYPE html>
@@ -71,6 +74,14 @@
 
     <!-- Hero section -->
     <header class="p-4 mt-5 mb-0">
+      <div class="float-end">
+        {% if user.is_authenticated %}
+        <a class="{% if request.path == logout_url %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
+        {% else %}
+        <a class="{% if request.path == login_url %}active{% endif %} text-white" href="{% url 'account_login' %}">Login</a>
+        <a class="{% if request.path == signup_url %}active{% endif %} text-white text-decoration-none px-3 py-1 bg-secondary rounded-4" href="{% url 'account_signup' %}">Sign Up</a>
+        {% endif %}
+      </div>
        <div class="container-fluid">
         <h1 class="display-2 fw-bold">Binary Beans</h1>
       </div>
