Move the login/sign up to the nav bar section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,10 +34,8 @@ body {
     font-size: 100%;
 }
 
-.login {
-    color: black;
-    font-size: 100%;
-    position: relative;
+.offcanvas.offcanvas-top {
+    height: 400px;
 }
 
 /* Header */
