--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,14 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Reviews</a>
               </li>
+              <li class="nav-item ps-3 pt-3 pt-lg-0">
+                {% if user.is_authenticated %}
+                <a class="{% if request.path == logout_url %}active{% endif %} text-black" href="{% url 'account_logout' %}">Logout</a>
+                {% else %}
+                <a class="{% if request.path == login_url %}active{% endif %} text-black" href="{% url 'account_login' %}">Login</a>
+                <a class="{% if request.path == signup_url %}active{% endif %} text-white text-decoration-none px-3 py-1 bg-secondary rounded-4" href="{% url 'account_signup' %}">Sign Up</a>
+                {% endif %}
+              </li>
             </ul>
           </div>
         </div>
@@ -74,14 +82,6 @@
 
     <!-- Hero section -->
     <header class="p-4 mt-5 mb-0">
-      <div class="float-end">
-        {% if user.is_authenticated %}
-        <a class="{% if request.path == logout_url %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
-        {% else %}
-        <a class="{% if request.path == login_url %}active{% endif %} text-white" href="{% url 'account_login' %}">Login</a>
-        <a class="{% if request.path == signup_url %}active{% endif %} text-white text-decoration-none px-3 py-1 bg-secondary rounded-4" href="{% url 'account_signup' %}">Sign Up</a>
-        {% endif %}
-      </div>
        <div class="container-fluid">
         <h1 class="display-2 fw-bold">Binary Beans</h1>
       </div>
