Add more infromation to the booking request model

--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -6,7 +6,7 @@
 
 <section class="container">
     <h2 class="text-center display-5 mt-5">{{ events.title }}</h2>
-    <div class="text-center">
+    <div class="text-center mb-4">
         <hr>
         <p class="my-5"><pre>{{ events.content}}</pre></p>
         <hr>
