Add a section for user events on the events page

--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -9,16 +9,40 @@
     <div class="text-center mb-4">
         <hr>
         <p class="my-5"><pre>{{ events.content}}</pre></p>
+    </div>
+    
+    {% for booking in bookings %}
+    {% if booking.customer_name == user %}
+    <div class="text-center mb-4">
+        <h2>My Events</h2>
+        <hr>
+        <p><pre>|  {{ booking.event_title }}  |</pre></p>
+        <p><pre>On {{ booking.booking_date }}</pre></p>
+        <p>-----------------------------------</p>
+        <p><pre>{{ booking.event_description }}</pre></p>
+        {% if booking.approved == False %}
+        <h5 class="py-3">Your booking is yet to be approved!</h5>
+        {% elif booking.approved == True %}
+        <h5 class="py-3">Your booking has been approved!</h5>
+        {% endif %}
         <hr>
     </div>
+
+    {% endif %}
+    {% endfor %}
+    
     <div class="row justify-content-center mt-5">
         <h2>Book a private event at our cafe!</h2>
         <p>Looking for the perfect venue to host your next private event? Binary Beans offers a charming and intimate setting ideal for any occasion. Whether you're planning a birthday celebration, corporate meeting, baby shower, or any other special gathering, our café provides a cozy and welcoming atmosphere to make your event unforgettable. </p>
+        {% if user.is_authenticated %}
         <form method="post">
             {{ booking_form | crispy }}
             {% csrf_token %}
             <button class="btn btn-secondary mb-5" type="submit">Submit</button>
         </form>
+        {% else %}
+        <h4 class="text-center my-5">Please <a class="link" href="{{ login_url }}">log in</a> if you would like to book out our Cafe!</h4>
+        {% endif %}
     </div>
 </section>
 
