--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -14,7 +14,7 @@
         <hr>
         <p>| Monday - Friday: 9:00am - 4:00pm |</p>
         <p>| Saturday: 8:30am - 5:00pm |</p>
-        <p>| Sunday: CLOSED |</p>
+        <p>| Sunday: 9:00am - 2:00pm |</p>
     </div>
 </section>
 
