--- a/events/templates/events/delete_booking.html
+++ b/events/templates/events/delete_booking.html
@@ -2,12 +2,12 @@
 
 {% block content %}
   <section class="container mt-5">
-    <h2>Delete Booking</h2>
-    <p>Are you sure you want to delete this booking request?</p>
+    <h2>Cancel Booking</h2>
+    <p>Are you sure you want to cancel this booking request?</p>
     <form method="post">
       {% csrf_token %}
-      <button class="btn btn-danger" type="submit">Yes, delete</button>
+      <button class="btn btn-danger rounded-4" type="submit">Yes</button>
     </form>
-    <a class="btn btn-link" href="{% url 'events' %}">Cancel</a>
+    <a class="btn btn-link text-white text-decoration-none px-3 py-1 bg-secondary rounded-4 my-2" href="{% url 'events' %}">Cancel</a>
   </section>
 {% endblock %}
