Add funcitonality for editing and deleting reviews

--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -30,8 +30,14 @@
                         </p>
                         <hr>
                         <div id="review{{ review.id }}">
-                            {{ review.review_body }}
+                            {{ review.review_body | linebreaks }}
                         </div>
+                        {% if review.review_name == user %}
+                        <div class="mt-4 text-end">
+                        <a class="btn btn-edit btn-secondary me-2" href="{% url 'edit_review' review.id %}">Edit</a>
+                        <a class="btn btn-delete btn-danger ms-2" href="{% url 'delete_review' review.id %}">Delete</a>
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
