Add functionality so users can remove their likes from a review

--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -45,7 +45,7 @@
                                     {% if request.user.is_authenticated and request.user not in review.likes.all %}
                                     <i class="fa-regular fa-thumbs-up fa-xl"></i> {{ review.total_likes }}
                                     {% else %}
-                                    <i class="fa-solid fa-thumbs-up fa-xl" style="color: #16ca43;"></i> {{ review.total_likes }}
+                                    <i class="fa-solid fa-thumbs-up fa-xl" style="color: #FFD43B;"></i> {{ review.total_likes }}
                                     {% endif %}
                                 </button>
                             </form>
