--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -26,7 +26,7 @@
         <p><pre>{{ booking.event_description }}</pre></p>
         <p><pre>Chosen Menu | {{ booking.menu }}</pre></p>
         <div class="d-flex justify-content-center">
-            <div id="menu" style="width: 600px; height: 700px;">
+            <div id="menu" style="width: 600px;">
                 <h1 class="text-center display-5 mt-4 pt-4 text-white">{{ booking.menu.title }}</h1>
                 <div class="text-white" style="text-align: center;">
                     <div class="text-center pb-4">
