--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -10,7 +10,7 @@
      <div id="menu">
         <h1 class="text-center display-5 mt-4 pt-4 text-white">{{ menu.title }}</h1>
         <div class="text-white" style="text-align: center;">
-            <div style="display: inline-block; text-align: left;">
+            <div style="display: inline-block; text-align: center;">
                 <p><pre>{{ menu.content}}</pre></p>
             </div>
         </div>
