--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<section class="container">
+<div class="container">
     <h1 class="text-center display-5 mt-5">{{ about.title }}</h1>
     <div class="text-center">
         <hr>
@@ -16,7 +16,7 @@
         <p>| Saturday: 8:30am - 5:00pm |</p>
         <p>| Sunday: 9:00am - 2:00pm |</p>
     </div>
-</section>
+</div>
 
 
 {% endblock content %}
