--- a/templates/base.html
+++ b/templates/base.html
@@ -89,11 +89,11 @@
       </div>
     </header>
 
-    <section class="container">
+    <div class="container">
       {% block content %}
       <!-- Content Goes here -->
       {% endblock content %}
-    </section>
+    </div>
   
 
     <section>
