Fix errors in html

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
     </div>
   
 
-    <section>
+    <div>
       <footer class="text-center">
         <!-- Copyright -->
         <div class="text-center p-3">
@@ -110,7 +110,7 @@
 
         </div>
       </footer>
-    </section>
+    </div>
 
 </body>
 </html>
