--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -7,11 +7,11 @@
     <!-- Display the Cafe's standard Menu -->
     <h1 class="text-center display-5 mt-5">Cafe Menu</h1>
     <hr>
-     <div id="menu">
-        <h1 class="text-center display-5 mt-4 pt-4 text-white">{{ menu.title }}</h1>
+     <div class="menu">
+        <h2 class="text-center display-5 mt-4 pt-4 text-white">{{ menu.title }}</h2>
         <div class="text-white" style="text-align: center;">
             <div style="display: inline-block; text-align: center;">
-                <p><pre>{{ menu.content}}</pre></p>
+                <pre>{{ menu.content}}</pre>
             </div>
         </div>
     </div>  
@@ -19,11 +19,11 @@
      <h1 class="text-center display-5 mt-5">Event Menus</h1>
      <hr>
      {% for event_menu in event_menus %}
-     <div id="menu">
-        <h1 class="text-center display-5 mt-4 pt-4 text-white">{{ event_menu.title }}</h1>
+     <div class="menu">
+        <h2 class="text-center display-5 mt-4 pt-4 text-white">{{ event_menu.title }}</h2>
         <div class="text-white" style="text-align: center;">
             <div class="text-center pb-4">
-                <p><pre>{{ event_menu.content}}</pre></p>
+                <pre>{{ event_menu.content}}</pre>
             </div>
         </div>
      </div>
